# tiresias

./: .gitignore  .tiresias.yml  .tiresias.yml.example  README.md  claude.md  pyproject.toml
.github/: copilot-instructions.md
.github/actions/tiresias/: action.yml
.github/workflows/: ci.yml  release.yml  tiresias-example.yml
examples/: design.md
src/tiresias/: __init__.py
src/tiresias/cli/: __init__.py  app.py
src/tiresias/core/: __init__.py  analyzer.py  baseline.py  config.py  file_loader.py  git_baseline.py  maturity.py  rules.py  scoring.py  suppression.py
src/tiresias/renderers/: __init__.py  explain.py  json.py  text.py
src/tiresias/schemas/: __init__.py  config.py  explain.py  report.py
tests/: conftest.py  test_analyzer.py  test_baseline.py  test_cli.py  test_config.py  test_e2e.py  test_explain.py  test_file_loader.py  test_gating.py  test_maturity.py  test_render.py  test_renderers.py  test_schema.py  test_scoring.py  test_suppression.py
tests/fixtures/: invalid_review.json  sample_doc.md  valid_review.json  valid_review_with_blocker.json
tiresias/: __init__.py  cli.py  config.py  gating.py  prompts.py  render.py  reviewer.py  schemas.py
tiresias/providers/: __init__.py  base.py  openai_provider.py
