[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiresias"
version = "0.1.0"
description = "Pre-mortem design review gatekeeper for Markdown documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
tiresias = "tiresias.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["tiresias*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
